<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eclipse Calculator</string>
    <string name="action_calculate">Calculate Odds</string>
    <string name="title_first_fleet">Attacking fleet</string>
    <string name="title_second_fleet">Defending fleet</string>
    <string name="label_ship_count">Ship Count</string>
    <string name="label_hull">Hull</string>
    <string name="label_ion_cannons">Ion Cannons</string>
    <string name="label_plasma_cannons">Plasma Cannons</string>
    <string name="label_plasma_missiles">Plasma Missiles</string>
    <string name="label_antimatter_cannons">Antimatter Cannons</string>
    <string name="label_computer">Computer</string>
    <string name="label_shield">Shield</string>
    <string name="label_initiative">Initiative</string>
    <string name="title_activity_results">Battle Odds</string>
    <string name="preset_name_unnamed">&lt;&lt;Unnamed&gt;&gt;</string>
    <string name="preset_name_ancient">Ancient Ship</string>
    <string name="preset_name_default_cruiser">Default Cruiser</string>
    <string name="preset_name_default_dreadnought">Default Dreadnought</string>
    <string name="preset_name_default_interceptor">Default Interceptor</string>
    <string name="preset_name_orion_interceptor">Orion Interceptor</string>
    <string name="preset_name_orion_cruiser">Orion Cruiser</string>
    <string name="preset_name_orion_dreadnought">Orion Dreadnought</string>
    <string name="preset_name_planta_interceptor">Planta Interceptor</string>
    <string name="preset_name_planta_cruiser">Planta Cruiser</string>
</resources>
